@@ -165,6 +165,8 @@ version 26-git (????-??-??):
   - enhancement: added customer flags - for now it is used for JPK TP purpose [chilan]
   - improvement: 'phpui.default_assignment_discount_type' controls preselected discount type
     in new customer assignment form ('percentage' by default) [chilan]
+  - enhancement: lms-notify.php support action parameter for 'assignment-invoice' which
+    specifies target document type [chilan]
 
 version 25.0 (2020-05-15):
 
